--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,36 @@ body{
 	background-repeat: no-repeat;
 	background-size: cover;
 }
+.navbar {
+	top: 0;
+	width: 100%;
+	height: 100px;
+	position: fixed;
+	background: #1f2235;
+	z-index: 999;
+}
+.navbar_container {
+	display: flex;
+	height: 100px;
+	align-items: center;
+	justify-content: space-between;
+}
+.navbar_left-logo img{
+	width: 70px;
+	border-radius: 50%;
+}
+.navbar_right{
+	display: flex;
+	list-style-type: none;
+}
+.navbar_right li a {
+	text-decoration: none;
+	color: #fff;
+	font-size: 18px;
+	font-weight: 500;
+	padding: 0 15px;
+}
+.container {
+	width: 1200px;
+	margin: 0 auto;
+}
