--- a/src/App.css
+++ b/src/App.css
@@ -55,3 +55,33 @@ body{
 .col-6 {
 	width: 50%;
 }
+.header_content {
+	display: flex;
+	align-items: center;
+	height: 100vh;
+	width: 100%;
+	color: #fff ;
+}
+.header_ul{
+	list-style-type: none;
+	display: flex;
+}
+.header_ul li {
+	width: 50px;
+	background: #111;
+	height: 50px;
+	border: 2px solid #ff4a57;
+	border-radius: 50%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin: 0 10px;
+}
+.header_ul li:first-child {
+	margin-left:  0;
+}
+.header_section h1 {
+	font-size: 57px;
+	font-weight: 700;
+	margin-bottom: 20px;
+}
