--- a/src/App.css
+++ b/src/App.css
@@ -85,3 +85,30 @@ body{
 	font-weight: 700;
 	margin-bottom: 20px;
 }
+.header_section p {
+	font-size: 26px;
+	font-weight: 300;
+	line-height: 40px;
+	margin-bottom: 50px;
+}
+
+.btn {
+	outline: none;
+	border: none;
+	color: #fff;
+	padding: 10px 10px;
+	text-decoration: none;
+}
+.btn-outline {
+	border: 2px solid #ff4a57;
+	border-radius: 50px;
+	padding: 13px 40px;
+}
+.btn-smart {
+	background: #ff4a57;
+	padding: 13px 25px;
+	border-radius: 50px;
+}
+.play {
+	font-size: 25px;
+}
