--- a/src/App.css
+++ b/src/App.css
@@ -182,3 +182,85 @@ body{
 	background: #23263a;
 	padding: 100px 0;
 }
+.about_img {
+	padding: 30px;
+}
+.about_img img {
+	width: 300px;
+	height: 400px;
+}
+.h-650 {
+	height: 650px;
+}
+.alignCenter{
+	align-items: center;
+}
+.about_info{
+	color:#fff;
+}
+.about_info h1{
+	margin-bottom: 30px;
+}
+.about_info-p1 {
+	font-size: 14px;
+	margin-bottom: 20px;
+}
+.about_info-p2 {
+	font-size: 14px;
+	margin-bottom: 20px;
+}
+.info_contacts{
+	margin-top: 20px;
+}
+.info_contacts strong {
+	color: #ff4a57;
+}
+.info_contacts p{
+	margin-top: 3px;
+}
+.info_contacts .col-6{
+	margin: 10px 0;
+}
+.prices {
+	width: 100%;
+	padding: 100px 0;
+	background:#1f2235;
+}
+.price {
+	background: #23263a ;
+	padding: 25px;
+	border-radius: 8px;
+	margin: 35px 20px;
+	color: #fff;
+	text-align: center;
+}
+.priceHeading {
+	font-size: 20px;
+	font-weight: 500;
+	margin-bottom: 15px;
+}
+.price_rs{
+	font-size: 50px;
+	font-weight: 200;
+	margin-bottom: 15px;
+}
+.price_rs span{
+	vertical-align: middle;
+	font-size: 25px;
+}
+.price ul{
+	list-style: none;
+}
+.col-4{
+	margin: 10px 0;
+	width: 25%;
+}
+.price ul li{
+	margin: 5px 0;
+	border-bottom: 1px solid #3c3c3c;
+	font-size: 14px;
+	margin: 15px 0;
+}
+.price_btn {
+	margin-top: 40px;
+}
