--- a/src/App.css
+++ b/src/App.css
@@ -51,6 +51,9 @@ body{
 .bgMain{
 	background: #1f2235;
 }
+.justifyConter{
+	justify-content: center;
+}
 
 .row {
 	display: flex;
@@ -162,11 +165,18 @@ body{
 	background: #23263a;
 	color: #fff;
 	margin: 20px;
+	transition: all 0.5s linear;
+}
+.services_box:hover {
+	background: #ff4a57;
 }
 .commonIcons {
 	font-size: 40px;
 	color: #ff4a57;
 	margin-bottom: 15px;
+}
+.services_box:hover .commonIcons{
+	color: #fff;
 }
 .services_box-header {
 	font-size: 20px;
@@ -263,4 +273,111 @@ body{
 }
 .price_btn {
 	margin-top: 40px;
+}
+.contact {
+	padding: 100px 0;
+	background: #23263a;
+}
+.contactSection-logo{
+	margin-bottom: 20px;
+	text-align: center;
+}
+.contactSection-logo img {
+	margin: o auto;
+	width: 130px;
+}
+.contactSection p {
+	display: flex;
+	justify-content: center;
+	color: #fff;
+	font-size: 14px;
+	margin-bottom: 20px;
+}
+.contactCircles {
+	width: 100%;
+	display: flex;
+	list-style: none;
+	justify-content: center;
+}
+.contactCircles li {
+	display: flex;
+	width: 50px;
+	height: 50px;
+	border-radius: 50%;
+	align-items: center;
+	justify-content: center;
+	color: #fff;
+	background: #1f2235 ;
+	margin: 0 10px;
+}
+.toggle{
+	position: fixed;
+	top: 20px;
+	right: 25px;
+	background: #000;
+	color: #fff;
+	width: 50px;
+	height: 50px;
+	border-radius: 50%;
+	cursor: pointer;
+	align-items: center;
+	justify-content: center;
+	display: none;
+}
+@media(max-width: 770px){
+	.container{
+		width: 100%;
+		padding: 0 50px;
+	}
+	.col-6{
+		width: 100%;
+	}
+	.col-3{
+		width: 100%;
+	}
+	.col-4{
+		width: 100%;
+	}
+	.navbar_right{
+		flex-direction: column;
+		width: 100%;
+		align-items: center;
+		background: #1f2235;
+		position:fixed;
+		top: 0;
+		left: 0;
+	}
+	.navbar_right li a{
+		display: block;
+		padding: 20px 0;
+		font-size: 20px;
+	}
+	.toggle{
+		display: flex;
+	}
+	.banner_img img{
+		display: none;
+	}
+	.header_section h1 {
+		font-size: 35px;
+		font-weight: 700;
+		margin-bottom: 20px;
+	}
+	.header_section p {
+		font-size: 20px;
+		font-weight: 300;
+		line-height: 30px;
+		margin-bottom: 50px;
+	}
+	.common {
+		width: 100%;
+	}
+	.h-650{
+		height: auto;
+	}
+	.about_img {
+		width: 100%;
+		text-align: center;
+		padding: 0px;
+	}
 }
