--- a/src/components/Skills.css
+++ b/src/components/Skills.css
@@ -1,7 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;0,600;1,400&family=Ubuntu:wght@400;500;700&display=swap');
 .skills {
-    padding: 10px;
-    margin-top: 30px;
+    padding: 40px ;
+    background: #1f2235;
+    color: #fff;
     font-family: "Poppins", sans-serif;
 }
 
